--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "pretest:light": "perl -i -pne 's{\\.\\./mocha\\.(css|js)}{mocha/mocha.$1}g; s{test/mocha-dark-test}{test/mocha-test}g' mocha-test.html",
     "test:light": "make test-all",
     "preversion": "./scripts/pre-version.sh",
-    "version": "./scripts/version.sh"
+    "version": "./scripts/version.sh",
+    "prepublishOnly": "./scripts/pre-publishOnly.sh",
+    "postpublish": "./scripts/post-publish.sh"
   },
   "dependencies": {
     "growl": "1.8.1",
