--- a/package.json
+++ b/package.json
@@ -280,9 +280,9 @@
     "usage": "pnpm run",
     "check": "npm-check --color-always --ignore browser || true",
     "test": "make test-all",
-    "pretest:dark": "perl -i -pne 's{mocha/mocha\\.(css|js)}{../mocha.$1}g; s{test/mocha-test}{test/mocha-dark-test}g' mocha-test.html",
+    "pretest:dark": "perl -i -pne 's{\"mocha-light\"}{\"mocha-dark\"}g' mocha-test.html",
     "test:dark": "make test-all",
-    "pretest:light": "perl -i -pne 's{\\.\\./mocha\\.(css|js)}{mocha/mocha.$1}g; s{test/mocha-dark-test}{test/mocha-test}g' mocha-test.html",
+    "pretest:light": "perl -i -pne 's{\"mocha-dark\"}{\"mocha-light\"}g' mocha-test.html",
     "test:light": "make test-all",
     "preversion": "./scripts/pre-version.sh",
     "version": "./scripts/version.sh",
